--- a/calculator.html
+++ b/calculator.html
@@ -49,7 +49,7 @@
                 <button class="orange" id="equal">=</button>                
             </div> 
         </div>
-    </div>.
+    </div>
     <script src="calculator.js"></script>
     
 </body>
